--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^3.11.0",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.41",
+    "mongodb": "^4.6.0",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
     "react": "17.0.2",
