--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "private": true,
   "scripts": {
-    "predev": "npx prisma generate",
     "dev": "next dev",
-    "prebuild": "npx prisma generate",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prisma:migrate": "npx prisma migrate deploy"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
+    "@next-auth/mongodb-adapter": "^1.0.3",
     "@prisma/client": "^3.11.0",
+    "@tailwindcss/forms": "^0.5.2",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.41",
     "mongodb": "^4.6.0",
@@ -24,7 +25,6 @@
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.12",
-    "prisma": "^3.11.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2"
   }
