--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "12.1.0",
     "next-auth": "^4.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
