--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^1.3.0"
+    "swr": "^2.0.0-beta.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
