--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@tailwindcss/forms": "^0.5.2",
 		"@types/node": "^17.0.21",
 		"@types/react": "^17.0.41",
+		"dotenv": "^16.0.1",
 		"mongodb": "^4.6.0",
 		"next": "12.1.0",
 		"next-auth": "^4.3.1",
