--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
 		"postcss": "^8.4.12",
 		"tailwindcss": "^3.0.23",
 		"typescript": "^4.6.2"
-	}
+	},
+	"prettier": {
+    "arrowParens": "always",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none"
+  }
 }
