--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"swr": "^2.0.0-beta.1"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^7.1.0",
 		"autoprefixer": "^10.4.4",
 		"eslint": "8.9.0",
 		"eslint-config-next": "12.1.0",
