fix: fixed scripts module

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"build": "yarn setup && next build",
 		"start": "next start",
 		"lint": "next lint",
-		"setup": "node ./scripts/setup.js"
+    "setup": "NODE_OPTIONS='--experimental-json-modules' node ./scripts/setup.mjs"
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.6.4",
