--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
 		"@next-auth/mongodb-adapter": "^1.0.3",
 		"@prisma/client": "^3.11.0",
 		"@tailwindcss/forms": "^0.5.2",
+		"@tailwindcss/typography": "^0.5.2",
 		"@types/node": "^17.0.21",
 		"@types/react": "^17.0.41",
 		"dotenv": "^16.0.1",
 		"mongodb": "^4.6.0",
 		"next": "12.1.0",
 		"next-auth": "^4.3.1",
+		"next-mdx-remote": "^4.0.3",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-textarea-autosize": "^8.3.4",
+		"remark": "^14.0.2",
 		"swr": "^2.0.0-beta.1"
 	},
 	"devDependencies": {
