--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.1.0",
     "react-textarea-autosize": "^8.3.4",
     "remark": "^14.0.2",
+    "remark-mdx": "^2.1.1",
     "swr": "^2.0.0-beta.1"
   },
   "devDependencies": {
