--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "^18.0.11",
     "dotenv": "^16.0.1",
+    "js-cookie": "^3.0.1",
     "mongodb": "^4.6.0",
     "next": "12.1.6",
     "next-auth": "^4.3.1",
