changed SECRET -> NEXTAUTH_SECRET

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
 // generate one here: https://generate-secret.vercel.app/32
-SECRET=
+NEXTAUTH_SECRET=
 
 // in prod, this needs to be the same as your URL 
 NEXTAUTH_URL=http://localhost:3000/api/auth
