--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 MONGODB_URI=
 
 // read more on how to configure these here: https://next-auth.js.org/providers/github
-// generate the client id and secret here: https://github.com/settings/developers by creating new Oauth application
+// generate the client id and secret here: https://github.com/settings/developers by creating a new OAuth application
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
