--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,5 @@ GITHUB_CLIENT_SECRET=
 // generate one here: https://generate-secret.vercel.app/32
 NEXTAUTH_SECRET=
 
-// in prod, this needs to be the same as your URL 
+// You don't need to define this variable in prod (only for localhost)
 NEXTAUTH_URL=http://localhost:3000/api/auth
