Edited instructions further

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,23 @@
-// your MongoDB database connection string
+// This is your MongoDB database connection string.
+// Note: Due to a bug, when deploying this application to Vercel, you'll need to go into your Vercel project's env vars page 
+// (https://vercel.com/<USERNAME/TEAM_SLUG>/<PROJECT_SLUG>/settings/environment-variables) and edit the 
+// MONGODB_URI string to replace the `/admin` part of the URL with `?retryWrites=true&w=majority`. We will fix this soon.
 MONGODB_URI=
 
-// read more on how to configure these here: https://next-auth.js.org/providers/github
-// generate the client id and secret here: https://github.com/settings/developers by creating a new OAuth application
+// How to generate a GitHub client id and secret: 
+// 1. Go to https://github.com/settings/developers and create a new OAuth application
+// 2. Name your application "MongoDB Starter"
+// 3. Set the homepage URL to https://vercel.app for now (we'll change this later)
+// 4. Set the authorization callback URL to https://vercel.app/api/auth/callback/github for now (we'll change this later)
+// 5. Click "Register application". 
+// 6. Once the application is created, copy the "Client ID".
+// 7. Generate a new client secret and copy that too.
+// 8. Once your application is deployed, edit the homepage & callback URLs to match your deployment URL.
+
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
-// generate one here: https://generate-secret.vercel.app/32
+// Generate one here: https://generate-secret.vercel.app/32
 NEXTAUTH_SECRET=
 
 // You don't need to define this variable in prod (only for localhost)
